# python-workers-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  semgrep.yml  vendoring.yml
01-hello/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc  wrangler.toml
01-hello/src/: entry.py
02-binding/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc  wrangler.toml
02-binding/src/: entry.py
03-fastapi/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc  wrangler.toml
03-fastapi/src/: worker.py
04-langchain/: .dev.vars  README.md  pyproject.toml  wrangler.toml
04-langchain/src/: worker.py
04-query-d1/: README.md  db_init.sql  package-lock.json  package.json  pyproject.toml  wrangler.jsonc  wrangler.toml
04-query-d1/src/: entry.py
05-langchain/: .dev.vars  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
05-langchain/src/: worker.py
05-query-d1/: README.md  pyproject.toml  wrangler.toml
05-query-d1/data/: csvtosql.py
05-query-d1/src/: entry.py
06-assets/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc  wrangler.toml
06-assets/assets/: index.html  script.js  style.css
06-assets/src/: worker.py
06-vendoring/: README.md  vendor.txt  wrangler.toml
06-vendoring/src/: worker.py
07-durable-objects/: README.md  db_init.sql  package-lock.json  package.json  pyproject.toml  worker-configuration.d.ts  wrangler.jsonc
07-durable-objects/src/: entry.py
08-cron/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
09-workers-ai/: README.md  package-lock.json  package.json  pyproject.toml  worker-configuration.d.ts  wrangler.jsonc
10-workflows/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
11-opengraph/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
12-image-gen/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
13-js-api-pygments/: README.md
13-js-api-pygments/py/: package-lock.json  package.json  pyproject.toml  wrangler.jsonc
13-js-api-pygments/py/src/: entry.py
14-websocket-stream-consumer/: README.md  package.json  pyproject.toml  wrangler.jsonc
14-websocket-stream-consumer/src/: entry.py
15-chatroom/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
16-containers-do/: README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
16-django-with-d1/: .gitignore  README.md  package.json  pyproject.toml  wrangler.jsonc
16-django-with-d1/src/: index.py
16-django-with-d1/src/app/: settings.py  urls.py
16-django-with-d1/src/blog/: models.py  urls.py  views.py
16-django-with-d1/src/blog/migrations/: 0001_initial.py
16-django-with-d1/src/blog/static/css/: style.css
16-django-with-d1/src/templates/: landing.html
16-django-with-d1/src/templates/blog/: base.html  post_detail.html  post_list.html
16-sync-http-clients/: README.md  package.json  pyproject.toml  wrangler.jsonc
16-sync-http-clients/src/: entry.py
17-dynamic-py-py/: README.md  package.json  pyproject.toml  wrangler.jsonc
17-r2/: README.md  package.json  pyproject.toml  wrangler.jsonc
tests/: conftest.py  test_examples.py
(+21 files in other folders)
