[project]
name = "python-websocket-stream-consumer"
version = "0.1.0"
description = "Python WebSocket stream consumer example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "wasmsockets @ git+https://github.com/dom96/wasmsockets.git@main",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
